Add Streamlit app comments, model, and training script

--- a/notebooks/01_load_data.ipynb
+++ b/notebooks/01_load_data.ipynb
@@ -793,15 +793,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "e9224913-5bbb-4829-800d-c5f507e6cc4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([157724.65538276, 348811.86839244,  86343.06577579, 174031.88939544,\n",
+       "       316983.37432781])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "loaded_model = joblib.load(MODEL_PATH)\n",
     "test_pred = loaded_model.predict(X_val.iloc[:5])\n",
-    "test_pred\n"
+    "test_pred"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dbf0437-2c94-4f03-bdde-6fe4e07b22c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
